--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -16,6 +16,7 @@
 	editor = vim
 	whitespace = cr-at-eol
 	autocrlf = input
+	safecrlf = false
 [user]
 	name = Tilak Patel
 	email = ptilak142@gmail.com
