save before restart

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,4 +37,5 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256col*:Tc"
