--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,3 +39,5 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 run '~/.tmux/plugins/tpm/tpm'
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+set-option -g default-shell /bin/zsh
+
