--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,7 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection cl
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -36,8 +37,14 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set-option -g default-shell /bin/zsh
 
+# DRACULA CONF
+set -g @dracula-cpu-usage true
+set -g @dracula-show-battery false
+set -g @dracula-show-network false
+set -g @dracula-show-weather false
+set -g @dracula-show-location false
+run '~/.tmux/plugins/tpm/tpm'
