--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -187,7 +187,7 @@ mode "resize" {
 
 bindsym Mod1+r mode "resize"
 
-#remove borders
+#smaller borders
 default_border pixel 5
 default_floating_border pixel 5
 
@@ -197,6 +197,7 @@ bar {
         status_command i3status
 	mode invisible
 }
+
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
