--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,4 +4,4 @@ font_family Fira Code
 map f1 pipe @screen window nvim -Rmn
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
-shell zsh
+shell fish
