update kitty to use gruvbox

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-include ./theme.conf
+include ./gruvbox-dark.conf
 font_size 20.5
 font_family Fira Code
 map f1 pipe @screen window nvim -Rmn
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
-shell fish
+shell zsh
