--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,3 +5,4 @@ map f1 pipe @screen window nvim -Rmn
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
 shell zsh
+cursor_shape block
