--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -53,6 +53,7 @@ bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym Mod1+d exec --no-startup-id rofi -show run
+bindsym Mod1+p exec --no-startup-id rofi -show window
 # A more modern dmenu replacement is rofi:
 # bindsym Mod1+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
