--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -53,6 +53,7 @@ bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym Mod1+d exec --no-startup-id "rofi -show combi -combi-modes \\"window,run\\" -modes combi"
+bindsym Mod1+m exec --no-startup-id "rofi-spotify"
 # A more modern dmenu replacement is rofi:
 # bindsym Mod1+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -200,15 +201,4 @@ bar {
 
 client.focused          #4c7899 #98971a #ffffff #2e9ef4 #98971a 
 
-
-#######################################################################
-# automatically start i3-config-wizard to offer the user to create a
-# keysym-based config which used their favorite modifier (alt or windows)
-#
-# i3-config-wizard will not launch if there already is a config file
-# in ~/.config/i3/config (or $XDG_CONFIG_HOME/i3/config if set) or
-# ~/.i3/config.
-#
-# Please remove the following exec line:
-#######################################################################
-exec i3-config-wizard
+exec nitrogen --restore
