--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include ./gruvbox-dark.conf
+include ./theme.conf
 font_size 20.5
 font_family FiraCode Nerd Font
 map f1 pipe @screen window nvim -Rmn
