--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,7 +18,7 @@
 	safecrlf = false
 [user]
 	name = Tilak Patel
-	email = ptilak142@gmail.com
+	email = tpatel@twilio.com
 [log]
 	date = iso
 [pull]
