--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,8 +1,14 @@
-include ./theme.conf
-font_size 20.5
-map f1 pipe @screen window nvim -Rmn
+font_size 14
+font_family JetBrains Mono
+map f1 pipe @text window nvim -Rmn
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
 shell zsh
 cursor_shape block
 shell_integration no-cursor
+
+
+# BEGIN_KITTY_THEME
+# GitHub Dark High Contrast
+include current-theme.conf
+# END_KITTY_THEME
