--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,41 +1,21 @@
-# gruvbox-dark colorscheme for kitty
-# snazzy theme used as base
-
-foreground            #ebdbb2
-background            #272727
-selection_foreground  #655b53
-selection_background  #ebdbb2
-url_color             #d65c0d
-
-# black
-color0   #272727
-color8   #928373
-
-# red
-color1   #cc231c
-color9   #fb4833
-
-# green
-color2   #989719
-color10  #b8ba25
-
-# yellow
-color3   #d79920
-color11  #fabc2e
-
-# blue
-color4  #448488
-color12 #83a597
-
-# magenta
-color5   #b16185
-color13  #d3859a
-
-# cyan
-color6   #689d69
-color14  #8ec07b
-
-# white
-color7   #a89983
-color15  #ebdbb2
-
+background #142838
+foreground #8ff586
+cursor #c4206f
+selection_background #084fb0
+color0 #142630
+color8 #fff688
+color1 #ff2320
+color9 #d4312e
+color2 #3aa5ff
+color10 #8ff586
+color3 #e9e75c
+color11 #e9f06d
+color4 #8ff586
+color12 #3c7dd2
+color5 #781aa0
+color13 #8230a7
+color6 #8ff586
+color14 #6cbc67
+color7 #ba45b1
+color15 #8ff586
+selection_foreground #142838
