--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,5 +10,5 @@ shell_integration no-cursor
 
 # BEGIN_KITTY_THEME
 # GitHub Dark High Contrast
-include current-theme.conf
+include theme.conf
 # END_KITTY_THEME
