--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,21 +1,61 @@
-background #142838
-foreground #8ff586
-cursor #c4206f
-selection_background #084fb0
-color0 #142630
-color8 #fff688
-color1 #ff2320
-color9 #d4312e
-color2 #3aa5ff
-color10 #8ff586
-color3 #e9e75c
-color11 #e9f06d
-color4 #8ff586
-color12 #3c7dd2
-color5 #781aa0
-color13 #8230a7
-color6 #8ff586
-color14 #6cbc67
-color7 #ba45b1
-color15 #8ff586
-selection_foreground #142838
+# vim:ft=kitty
+
+## name: GitHub Dark High Contrast
+## author: GitHub
+## license: MIT
+
+#: The basic colors
+
+foreground #f0f3f6
+background #0a0c10
+selection_foreground #0a0c10
+selection_background #71b7ff
+
+
+#: Cursor colors
+
+cursor #71b7ff
+
+
+#: Tab bar colors
+
+tab_bar_background #010409
+active_tab_foreground #f0f3f6
+active_tab_background #0a0c10
+inactive_tab_foreground #f0f3f6
+inactive_tab_background #010409
+
+
+#: The basic 16 colors
+
+#: black
+color0 #7a828e
+color8 #9ea7b3
+
+#: red
+color1 #ff9492
+color9 #ffb1af
+
+#: green
+color2 #26cd4d
+color10 #4ae168
+
+#: yellow
+color3 #f0b72f
+color11 #f7c843
+
+#: blue
+color4 #71b7ff
+color12 #91cbff
+
+#: magenta
+color5 #cb9eff
+color13 #dbb7ff
+
+#: cyan
+color6 #39c5cf
+color14 #56d4dd
+
+#: white
+color7 #d9dee3
+color15 #ffffff
